[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "metarep"
dynamic = ["version"]
description = "A repository about making repositories"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [{ name = "Luca Baldini", email = "luca.baldini@unipi.it" }]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/lucabaldini/metarep"
Issues = "https://github.com/lucabaldini/metarep/issues"

[tool.hatch.version]
path = "src/metarep/_version.py"
